[gd_scene load_steps=4 format=3 uid="uid://b5t2dpn0523jg"]

[ext_resource type="Script" path="res://ui/menu.gd" id="1_1v2kd"]
[ext_resource type="Texture2D" uid="uid://bukptbodo2x0h" path="res://sprites/message.png" id="1_lwmjo"]
[ext_resource type="FontFile" uid="uid://dxoiuktialkpo" path="res://fonts/score_font_50.tres" id="3_ac7op"]

[node name="Menu" type="CanvasLayer"]
script = ExtResource("1_1v2kd")

[node name="StartMenu" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="StartMessage" type="TextureRect" parent="StartMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -128.0
offset_top = -260.0
offset_right = 56.0
offset_bottom = 7.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.31667, 1.31667)
texture = ExtResource("1_lwmjo")

[node name="GameOverMenu" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="GameOverMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -125.0
offset_top = -176.0
offset_right = 125.0
offset_bottom = 84.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 15
alignment = 1

[node name="ScoreLabel" type="Label" parent="GameOverMenu/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 3
theme_override_constants/shadow_offset_y = 3
theme_override_constants/outline_size = 3
theme_override_constants/shadow_outline_size = 3
theme_override_fonts/font = ExtResource("3_ac7op")
theme_override_font_sizes/font_size = 50
text = "SCORE: 0"
horizontal_alignment = 1

[node name="HighScoreLabel" type="Label" parent="GameOverMenu/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 3
theme_override_constants/shadow_offset_y = 3
theme_override_constants/outline_size = 3
theme_override_constants/shadow_outline_size = 3
theme_override_fonts/font = ExtResource("3_ac7op")
theme_override_font_sizes/font_size = 50
text = "BEST: 0"
horizontal_alignment = 1

[node name="Restart" type="Button" parent="GameOverMenu/VBoxContainer"]
custom_minimum_size = Vector2(0, 85)
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("3_ac7op")
theme_override_font_sizes/font_size = 50
text = "RESTART"
icon_alignment = 1

[connection signal="pressed" from="GameOverMenu/VBoxContainer/Restart" to="." method="_on_restart_pressed"]
